overflow fix

--- a/src/styles/homestyles/styles.css
+++ b/src/styles/homestyles/styles.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url("https://use.typekit.net/zmr3gei.css");
 @import url("https://fonts.googleapis.com/css2?family=Ysabeau+Infant:wght@400;600&display=swap");
+#no-over {
+  overflow-x: hidden;
+}
+
 #title {
   font-family: "myriad-pro", sans-serif;
   font-style: normal;
